--- a/src/app/components/AutoComplete/AutoComplete.module.css
+++ b/src/app/components/AutoComplete/AutoComplete.module.css
@@ -1,50 +1,49 @@
 .autocomplete {
-    position: relative;
-    width: 200px;
-    margin: 0 10px;
-  }
-  
-  .input {
-    width: 100%;
-    padding: 8px 12px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 16px;
-    color: #333;
-    transition: border-color 0.3s, background-color 0.3s;
-  }
-  
-  .input:hover {
-    border-color: #aaa;
-    background-color: #fff;
-  }
-  
-  .input.invalid {
-    border-color: red;
-  }
-  
-  .options {
-    position: absolute;
-    width: 100%;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-top: none;
-    border-radius: 0 0 4px 4px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 10;
-    max-height: 150px;
-    overflow-y: auto;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-  }
-  
-  .option {
-    padding: 8px 12px;
-    cursor: pointer;
-  }
-  
-  .option:hover {
-    background-color: #f0f0f0;
-  }
-  
+  position: relative;
+  width: 150px;
+  margin: 0 5px;
+}
+
+.input {
+  width: 100%;
+  padding: 8px 12px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+  color: #333;
+  transition: border-color 0.3s, background-color 0.3s;
+}
+
+.input:hover {
+  border-color: #aaa;
+  background-color: #fff;
+}
+
+.input.invalid {
+  border-color: #dc3545;
+}
+
+.options {
+  position: absolute;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-top: none;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  max-height: 150px;
+  overflow-y: auto;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.option {
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
+.option:hover {
+  background-color: #f0f0f0;
+}
