--- a/src/app/components/Topbar/Topbar.module.css
+++ b/src/app/components/Topbar/Topbar.module.css
@@ -1,13 +1,66 @@
 .topbar {
   position: fixed;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  top: 50px;
+  right: 0;
   background-color: #ffffff;
-  padding: 10px 20px;
+  padding: 10px 10px;
+  padding-bottom: 0;
   z-index: 21;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   border-radius: 8px;
+  width: 590px;
+}
+
+.formGroup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.formGroup:last-child {
+  margin-right: 0;
+}
+
+.error {
+  color: red;
+  font-size: 0.875rem;
+  height: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.invalid input {
+  border-color: #dc3545;
+}
+
+.required input {
+  border-color: blue;
+}
+
+.submitButton {
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  background: linear-gradient(45deg, #007bff, #0056b3);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s ease, transform 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  align-self: center;
+  margin-left: 5px;
+  margin-bottom: 1rem;
+}
+
+.submitButton:hover {
+  background: linear-gradient(45deg, #0056b3, #003580);
+}
+
+.submitButton:active {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
