improved RightSidebar, added tooltip for ports, added tables for vessels

--- a/frontend/src/app/ClientRootLayout.module.css
+++ b/frontend/src/app/ClientRootLayout.module.css
@@ -24,3 +24,11 @@
   z-index: 0;
   min-height: calc(100vh - 60px);
 }
+
+.visible {
+  display: block; /* Make the component visible */
+}
+
+.hidden {
+  display: none; /* Hide the component but keep it in the DOM */
+}
