--- a/frontend/src/app/components/TableForCarbon/TableForCarbon.module.css
+++ b/frontend/src/app/components/TableForCarbon/TableForCarbon.module.css
@@ -1,6 +1,6 @@
 .tableForCarbon {
     position: absolute;
-    top: calc(254px + 330px);
+    top: 553px;
     right: 0;
     padding: 10px;
     background-color: #f8f8f8;
