signin page, cyclone layer button to rightside bar and code refactor

--- a/frontend/src/app/components/TableForCarbon/TableForCarbon.module.css
+++ b/frontend/src/app/components/TableForCarbon/TableForCarbon.module.css
@@ -1,9 +1,9 @@
 .tableForCarbon {
     position: absolute;
-    top: 553px;
+    top: 571px;
     right: 0;
     padding: 10px;
-    background-color: #f8f8f8;
+    background-color: #ffffff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     z-index: 499;
