visual improvement for tbarcarbon

--- a/frontend/src/app/components/TopbarForCarbon/TopbarForCarbon.module.css
+++ b/frontend/src/app/components/TopbarForCarbon/TopbarForCarbon.module.css
@@ -1,5 +1,6 @@
 .topbarForCarbon {
   padding: 20px;
+  padding-bottom: 0;
   background-color: #f8f8f8;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -97,8 +98,10 @@
 
 .buttonContainer {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
+  padding-bottom: 10px;
 }
 
 .button {
@@ -110,13 +113,29 @@
 }
 
 .buttonReset {
-  background-color: #dc3545;
-  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  background: linear-gradient(45deg, #dc3545, #c82333);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s ease, transform 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .buttonCalculate {
-  background-color: #007bff;
-  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  background: linear-gradient(45deg, #007bff, #0056b3);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s ease, transform 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .select {
