--- a/frontend/src/app/components/AutoComplete/AutoComplete.module.css
+++ b/frontend/src/app/components/AutoComplete/AutoComplete.module.css
@@ -51,9 +51,9 @@
 
 .clearButton {
   position: absolute;
-  right: 10px; /* Adjust as needed */
-  top: 50%; /* Center vertically */
-  transform: translateY(-50%); /* Adjust vertical position */
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
   background: none;
   border: none;
   cursor: pointer;
@@ -62,5 +62,5 @@
 }
 
 .clearButton:focus {
-  outline: none; /* Remove outline for better UI */
+  outline: none;
 }
