--- a/frontend/src/app/auth/signin/signin.module.css
+++ b/frontend/src/app/auth/signin/signin.module.css
@@ -1,31 +1,30 @@
 .signInBackground {
-    background: linear-gradient(to bottom right, #e3f2fd, #90caf9);
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  
-  .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
-    padding: 0.75rem;
-    font-size: 1rem;
-    border-radius: 6px;
-  }
-  
-  .btn-outline-secondary {
-    border-color: #6c757d;
-    padding: 0.75rem;
-    font-size: 1rem;
-    border-radius: 6px;
-  }
-  
-  input.form-control {
-    padding: 0.75rem;
-    font-size: 1rem;
-    border-radius: 6px;
-  }
-  
-  
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/backgrounds/signinbackground.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+  padding: 0.75rem;
+  font-size: 1rem;
+  border-radius: 6px;
+}
+
+.btn-outline-secondary {
+  border-color: #6c757d;
+  padding: 0.75rem;
+  font-size: 1rem;
+  border-radius: 6px;
+}
+
+input.form-control {
+  padding: 0.75rem;
+  font-size: 1rem;
+  border-radius: 6px;
+}
