--- a/frontend/src/app/components/LeftSidebar/LeftSidebar.module.css
+++ b/frontend/src/app/components/LeftSidebar/LeftSidebar.module.css
@@ -67,7 +67,12 @@
 
 .icon {
   font-size: 24px;
+  width: 30px;
+  height: 30px;
   margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .text {
@@ -90,10 +95,10 @@
 }
 
 .link {
-  text-decoration: none; /* Removes text underline */
+  text-decoration: none;
 }
 
 .link:focus,
 .link:hover {
-  text-decoration: none; /* Ensures no underline on hover */
+  text-decoration: none;
 }
